--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Tom Riley",email = "tomdriley@outlook.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.13"
 dependencies = [
     "pyyaml (>=6.0.2,<7.0.0)"
 ]
@@ -23,9 +23,11 @@ black = "^25.1.0"
 
 [tool.black]
 line-length = 88
+target-version = ["py3.13"]
 
 [tool.flake8]
 max-line-length = 88
+extend-ignore = ["E203", "E501"]
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
