--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "editor.formatOnSave": true,
-    "python.testing.unittestEnabled": true,
-    "python.testing.pytestEnabled": false,
-    "editor.defaultFormatter": "ms-python.black-formatter"
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true,
+    "editor.defaultFormatter": "ms-python.black-formatter",
+    "python.testing.pytestArgs": [
+        "tests"
+    ]
 }
