--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ pytest = "^8.3.5"
 flake8 = "^7.2.0"
 black = "^25.1.0"
 coverage = "^7.8.0"
+pytest-cov = "^6.1.1"
 
 [tool.black]
 line-length = 88
