--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ dependencies = [
 [tool.poetry]
 packages = [{include = "simulator", from = "src"}]
 
+[tool.poetry.scripts]
+ttl-cpu = "simulator.main:main"
+
 [tool.poetry.group.dev.dependencies]
 flake8-pyproject = "^1.2.3"
 mypy = "^1.15.0"
