--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "simulator"
+name = "turtle_toolkit"
 version = "0.1.0"
-description = "Assembler and Simulator for the TTL CPU ISA"
+description = "Assembler and Simulator for the Turtle CPU ISA"
 authors = [
     {name = "Tom Riley",email = "tomdriley@outlook.com"}
 ]
@@ -12,10 +12,10 @@ dependencies = [
 ]
 
 [tool.poetry]
-packages = [{include = "simulator", from = "src"}]
+packages = [{include = "turtle_toolkit", from = "src"}]
 
-[tool.poetry.scripts]
-ttl-cpu = "simulator.main:main"
+[project.scripts]
+turtle-toolkit = "turtle_toolkit.main:main"
 
 [tool.poetry.group.dev.dependencies]
 flake8-pyproject = "^1.2.3"
