--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ flake8 = "^7.2.0"
 black = "^25.1.0"
 coverage = "^7.8.0"
 pytest-cov = "^6.1.1"
+types-pyyaml = "^6.0.12.20250402"
+isort = "^6.0.1"
 
 [tool.black]
 line-length = 88
