--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,3 +39,13 @@ extend-ignore = ["E203", "E501"]
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.isort]
+profile = "black"
+line_length = 88
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+known_first_party = ["turtle_toolkit"]
+
