--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,23 @@
 {
     "editor.formatOnSave": true,
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.black-formatter",
+        "editor.formatOnSave": true,
+        "editor.codeActionsOnSave": {
+            "source.organizeImports": "explicit"
+        },
+    },
+    "isort.args": [
+        "--profile",
+        "black"
+    ],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
-    "editor.defaultFormatter": "ms-python.black-formatter",
     "python.testing.pytestArgs": [
         "tests"
-    ]
+    ],
+    "editor.defaultFormatter": "ms-python.black-formatter",
+    "[jsonc]": {
+        "editor.defaultFormatter": "vscode.json-language-features"
+    }
 }
