--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,13 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
         {
-            "name": "Simulator Main Module",
+            "name": "Python Debugger: Current File with Arguments",
             "type": "debugpy",
             "request": "launch",
-            "module": "simulator.main"
+            "program": "./turtle-toolkit",
+            "console": "integratedTerminal",
+            "args": "${command:pickArgs}"
         }
     ]
 }
