--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Tom Riley",email = "tomdriley@outlook.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.11,<3.12"
 dependencies = [
     "pyyaml (>=6.0.2,<7.0.0)"
 ]
@@ -28,6 +28,7 @@ coverage = "^7.8.0"
 pytest-cov = "^6.1.1"
 types-pyyaml = "^6.0.12.20250402"
 isort = "^6.0.1"
+vmprof = "^0.4.18.1"
 
 [tool.black]
 line-length = 88
