--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,8 @@
         "ms-python.mypy-type-checker",
         "ms-python.black-formatter",
         "ms-python.flake8",
-        "ms-python.debugpy"
+        "ms-python.debugpy",
+        "ms-azuretools.vscode-docker"
       ]
     }
   }
