--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,7 +13,9 @@
         "ms-python.black-formatter",
         "ms-python.flake8",
         "ms-python.debugpy",
-        "ms-azuretools.vscode-docker"
+        "ms-azuretools.vscode-docker",
+        "ms-vscode-remote.remote-containers",
+        "GitHub.copilot-chat"
       ]
     }
   }
