--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,8 @@
         "ms-python.flake8",
         "ms-python.python",
         "ms-python.debugpy",
-        "ms-azuretools.vscode-docker"
+        "ms-azuretools.vscode-docker",
+        "ms-vscode-remote.remote-containers",
+        "github.copilot-chat"
     ]
 }
