--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ coverage = "^7.8.0"
 pytest-cov = "^6.1.1"
 types-pyyaml = "^6.0.12.20250402"
 isort = "^6.0.1"
+snakeviz = "^2.2.2"
 
 [tool.black]
 line-length = 88
