--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,6 +7,7 @@
         "ms-python.debugpy",
         "ms-azuretools.vscode-docker",
         "ms-vscode-remote.remote-containers",
-        "github.copilot-chat"
+        "github.copilot-chat",
+        "ms-python.isort"
     ]
 }
