--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ pytest-cov = "^6.1.1"
 types-pyyaml = "^6.0.12.20250402"
 isort = "^6.0.1"
 snakeviz = "^2.2.2"
+line-profiler = "^4.2.0"
 
 [tool.black]
 line-length = 88
