--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,6 @@
     },
     "github.copilot.enable": {
         "markdown": true
-    }
+    },
+    "python.analysis.typeCheckingMode": "basic"
 }
