Fix some configs

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,7 @@
   "build": {
     "dockerfile": "Dockerfile"
   },
-  "postCreateCommand": "poetry install",
+  "postCreateCommand": "poetry config virtualenvs.in-project true && poetry install",
   "customizations": {
     "vscode": {
       "extensions": [
